nav bar edges fix on small devices.

--- a/sass/_bootstrap-responsive.scss
+++ b/sass/_bootstrap-responsive.scss
@@ -450,7 +450,7 @@
 }
 
 @media (max-width: 767px) {
-  body {
+  .container {
     padding-right: 20px;
     padding-left: 20px;
   }
